--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,8 @@
     <Compile Include="Assets\Scripts\Data\Slot.cs" />
     <Compile Include="Assets\Scripts\Loading\LoadingScene.cs" />
     <Compile Include="Assets\Scripts\Loading\SceneLoader.cs" />
+    <Compile Include="Assets\Scripts\Movement\MouseLook.cs" />
+    <Compile Include="Assets\Scripts\Movement\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\UI\InventoryController.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/Ryan/Documents/GitHub/Vaportis/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
