--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
      <Compile Include="Assets\Scripts\Data\Inventory.cs" />
      <Compile Include="Assets\Scripts\Data\Item.cs" />
      <Compile Include="Assets\Scripts\Data\Items.cs" />
+     <Compile Include="Assets\Scripts\Data\Player.cs" />
      <Compile Include="Assets\Scripts\Data\Quests\Goal.cs" />
      <Compile Include="Assets\Scripts\Data\Quests\Quest.cs" />
      <Compile Include="Assets\Scripts\Data\Quests\Quests.cs" />
@@ -68,6 +69,7 @@
      <Compile Include="Assets\Scripts\Movement\MouseLook.cs" />
      <Compile Include="Assets\Scripts\Movement\PlayerMovement.cs" />
      <Compile Include="Assets\Scripts\ResourceManager\SpriteManager.cs" />
+     <Compile Include="Assets\Scripts\UI\HUD.cs" />
      <Compile Include="Assets\Scripts\UI\InventoryController.cs" />
      <Compile Include="Assets\Scripts\UI\MenuHandler.cs" />
  <Reference Include="Unity.Timeline.Editor">
